// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCounter should handle null value 1`] = `
<CharacterCounter__Counter
  limit={25}
  value={null}
>
  25
</CharacterCounter__Counter>
`;

exports[`CharacterCounter should render 1`] = `
<CharacterCounter__Counter
  limit={25}
  value="FooBar"
>
  19
</CharacterCounter__Counter>
`;

exports[`CharacterCounter should render correct style when limit exceeded 1`] = `
.c0 {
  color: #D0021B;
  position: absolute;
  top: 1px;
  bottom: 1px;
  right: 1px;
  padding: 0.5em;
  background: white;
}

<span
  className="c0"
  value="FooBarFooBarFooBarFooBarFooBarFooBar"
/>
`;

exports[`CharacterCounter should render correct style when limit not exceeded 1`] = `
.c0 {
  color: #c3c3c3;
  position: absolute;
  top: 1px;
  bottom: 1px;
  right: 1px;
  padding: 0.5em;
  background: white;
}

<span
  className="c0"
  value="FooBar"
/>
`;

exports[`CharacterCounter should update counter based on length of value 1`] = `
<CharacterCounter__Counter
  limit={25}
  value="FooBarFooBarFooBar"
>
  7
</CharacterCounter__Counter>
`;

exports[`CharacterCounter should update counter with negative count when limit exceeded 1`] = `
<CharacterCounter__Counter
  limit={25}
  value="FooBarFooBarFooBarFooBarFooBarFooBar"
>
  -11
</CharacterCounter__Counter>
`;
